[package]
name = "tensogram-grib"
version = "0.14.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "GRIB to Tensogram format converter using ecCodes"
repository = "https://github.com/ecmwf/tensogram"
homepage = "https://sites.ecmwf.int/docs/tensogram/main"
documentation = "https://sites.ecmwf.int/docs/tensogram/main"
readme = "README.md"
keywords = ["tensogram", "grib", "weather", "scientific-data", "eccodes"]
categories = ["science"]
authors = ["ECMWF <software-support@ecmwf.int>"]

[dependencies]
tensogram-core = { path = "../tensogram-core", version = "=0.14.0" }
tensogram-encodings = { path = "../tensogram-encodings", version = "=0.14.0" }
eccodes = { version = "0.14", default-features = false }
thiserror = "2"
ciborium = "0.2"

[dev-dependencies]
tempfile = "3"
